--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://new-api-git-master-akila-piyumanthas-projects.vercel.app/",
+  "proxy": "https://last-api-five.vercel.app/",
   "name": "airdyna",
   "version": "0.1.0",
   "private": true,
