--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "proxy": "http://localhost:4000",
+ "proxy": "https://last-api-five.vercel.app/",
   "name": "airdyna",
   "version": "0.1.0",
   "private": true,
